Fix spacing on sign-up transition

--- a/styles/login.scss
+++ b/styles/login.scss
@@ -104,7 +104,7 @@ $login-width: 40vh;
   @keyframes slideleft {
     to {
       left: 100%;
-      transform: translateX(-101%);
+      transform: translateX(-102%);
     }
   }
 
@@ -116,7 +116,7 @@ $login-width: 40vh;
   @keyframes slideright {
     from {
       left: 100%;
-      transform: translateX(-101%);
+      transform: translateX(-102%);
     }
   }
 }
